Bug 341695 - Instance name of object widgets are not editable through property dialog
Summary: Instance name of object widgets are not editable through property dialog
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.14.95 (KDE Applications 14.11.95)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-09 14:39 UTC by Ralf Habacker
Modified: 2014-12-11 22:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.15.0 (KDE 14.12.0)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2014-12-09 14:39:36 UTC
Opening the property dialogs for object widgets does not show an edit field for the instance name.
The only way to change the instance name is by using the context menu entry "Rename object".


Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. add an object diagram
3. add an object
4. right click on object and select "Properties"

Actual Results:  
There is no edit field for the instance name

Expected Results:  
There should be an edit field for the instance name
Comment 1 Ralf Habacker 2014-12-09 14:43:17 UTC
Git commit 8483222ea9d1ea671fbd62d7e434504512bd3b2b by Ralf Habacker.
Committed on 09/12/2014 at 14:20.
Pushed by habacker into branch 'Applications/14.12'.

Fix bug not displaying correct dialog for object widgets.

M  +4    -1    umbrello/dialogs/classpropertiesdialog.cpp

http://commits.kde.org/umbrello/8483222ea9d1ea671fbd62d7e434504512bd3b2b
Comment 2 Ralf Habacker 2014-12-09 18:42:23 UTC
Git commit 9a544a63c1a5f6c6f47f6a5d04dc246fbc0c61d0 by Ralf Habacker.
Committed on 09/12/2014 at 14:20.
Pushed by habacker into branch 'work/73847'.

Fix bug not displaying correct dialog for object widgets.

M  +4    -1    umbrello/dialogs/classpropertiesdialog.cpp

http://commits.kde.org/umbrello/9a544a63c1a5f6c6f47f6a5d04dc246fbc0c61d0
Comment 3 Andi Fischer 2014-12-11 22:19:32 UTC
Git commit 9ca4419705f34fb0edbe2c5ffa77eb209920bb00 by Andi Fischer, on behalf of Ralf Habacker.
Committed on 09/12/2014 at 14:20.
Pushed by fischer into branch 'frameworks'.

Fix bug not displaying correct dialog for object widgets.

M  +4    -1    umbrello/dialogs/classpropertiesdialog.cpp

http://commits.kde.org/umbrello/9ca4419705f34fb0edbe2c5ffa77eb209920bb00