Fix bug not displaying correct dialog for object widgets.

BUG:341695